# data-structures

./: LICENSE  README.md
src/sequentialList/: CMakeLists.txt  example.c
src/sequentialList/sequentialList/: CMakeLists.txt  sequentialList.c  sequentialList.h
